spec/e2e/field/get_on_type.lit
type Foo {}
Foo.bar # error: [line 2] Runtime error: Only instances have properties, got Type.
